style.css
/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet*/
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");

body {
  background-color: #eae2b7;
  color: #003049;
  font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
  padding: 40px;
}

/* Headings */
h1,
h2,
h3 {
  font-family: "Playfair Display", Times, serif;
  text-align: center;
}

/* Header */
header {
  
}

/* Containers */
div {
  background-color: #eae2b7;
  margin: auto;
  width: 600px;
  
}

article {
  padding: 50px 0;
}

article div { text-align: center; width: 100%; }

/* Paragraphs */
p {
  line-height: 1.5;
  font-size: 14px;
}

/* Links */
a:link {
  color: #d62828;
}

a:hover {
  color: #f77f00;
}

nav a {
  margin-left: 20px;
}

/* Images */
img {
  width: 100%;
  max-width: 200px;
  height: auto;
}

.image-circle {
  border: 2px solid #003049;
  border-radius: 50%;
}

/* Footer */
footer {
  text-align: center;
}

/* Other page elements */
hr {
  border: 1px solid black;
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.about-container{
  display: flex;
  align-items: center;
  flex-direction: row;
}
.about-pete-container{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.image-container {
  margin-right: 20px;

}

.portfolio-container {
  display: flex;
  justify-content: space-between;
  flex-direction: row;


  
}

